--- a/phone-number-search/pom.xml
+++ b/phone-number-search/pom.xml
@@ -40,6 +40,21 @@
 
     </dependencies>
 
+    <distributionManagement>
+        <repository>
+            <id>nexus-release</id>
+            <url>
+                http://49.233.163.47:8081/repository/maven-releases/
+            </url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus-snapshot</id>
+            <url>
+                http://49.233.163.47:8081/repository/maven-snapshots/
+            </url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
@@ -53,6 +68,11 @@
                     <encoding>utf-8</encoding>
                 </configuration>
             </plugin>
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-deploy-plugin</artifactId>
+    <version>2.8.2</version>
+</plugin>
 
         </plugins>
     </build>
